infrastructure/helm/postgres/base/postgres-ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: factorio-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test.local.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: db-postgresql
            port:
              number: 27015
